tests/NormalTests/paczka2/big_fuzzy/81599973.err
Error in line 8: 81lOecPdb A889 16,5
Error in line 22: EyUY A87 24,9
Error in line 23: EyUY A889 70,7
Error in line 14: 81lOecPdb S4 27,3
Error in line 26: 81lOecPdb A87 36,8
Error in line 31: 81lOecPdb S4 -1,8
Error in line 2: A310 A87 94,0
Error in line 37: PhPEgqnL A889 83,7
Error in line 49: XzO A87 26,8
Error in line 54: XzO A310 69,5
Error in line 59: XzO A87 58,9
Error in line 63: A310 S4 37,6
Error in line 60: XzO A310 581,5
Error in line 72: 0WZyNaDyOS A889 49,4
Error in line 88: 81lOecPdb A310 581,3
Error in line 89: EyUY S4 53,2
Error in line 92: 81lOecPdb S4 95,5
Error in line 94: XzO A310 8,8
Error in line 93: PhPEgqnL A889 73,6
Error in line 98: XzO A87 46,1
Error in line 101: XzO A310 47,2
Error in line 118: fNJlL A889 2,2
Error in line 123: fNJlL S4 22,7
Error in line 128: XzO A87 7,7
Error in line 137: 81lOecPdb S4 48,0
Error in line 142: PhPEgqnL A889 65,9
Error in line 136: EyUY A87 49,5
Error in line 140: 81lOecPdb A889 66,6
Error in line 145: EyUY A889 45,0
Error in line 154: 0WZyNaDyOS A889 45,4
Error in line 155: fNJlL A889 81,4
Error in line 156: 0WZyNaDyOS A87 60,2
Error in line 149: EyUY A310 445,2
Error in line 167: EyUY A889 21,5
Error in line 172: EyUY S4 57,8
Error in line 157: PhPEgqnL S4 35,5
Error in line 188: 0WZyNaDyOS A87 336,2
Error in line 206: PhPEgqnL S4 -1,2
Error in line 198: 81lOecPdb A310 19,6
Error in line 203: PhPEgqnL S4 39,4
Error in line 212: PhPEgqnL A310 4,8
Error in line 207: XzO A310 19,4
Error in line 211: A310 A310 0,9
Error in line 225: fNJlL A310 82,3
Error in line 236: EyUY A310 38,9
Error in line 235: A310 A87 4,0
Error in line 242: XzO S4 96,0
Error in line 244: XzO A310 5,4
Error in line 247: XzO A889 53,2
